Bug 201921 - .kim import crashes KPA
Summary: .kim import crashes KPA
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Import/Export (other bugs)
Version First Reported In: SVN trunk (KDE4 version)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-29 20:46 UTC by Martin Jost
Modified: 2012-02-04 18:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
crash report from KDE (8.12 KB, application/octet-stream)
2009-07-29 20:46 UTC, Martin Jost
Details
.kim file which crashes KPA 4.1.0 (3.68 KB, application/octet-stream)
2009-11-11 18:32 UTC, Martin Jost
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Jost 2009-07-29 20:46:20 UTC
Created attachment 35720 [details]
crash report from KDE

I have here a case, where importing a .kim file crashes KPA.
KPA is the latest snapshot (20090721). The .kim file was also created by
this snapshot.

Find the .kcrash-file attached.
I'm willing to provide the .kim-file in private email, if this helps.
Comment 1 Jesper Pedersen 2009-07-29 22:43:52 UTC
Yes, please send me the .kim file to blackie@kde.org
Comment 2 Dario Andres 2009-07-30 00:40:19 UTC
Pasting backtrace inline:
-------

Anwendung: KPhotoAlbum (kphotoalbum), Signal SIGABRT
[?1034h[Thread debugging using libthread_db enabled]
0x00007f084cf88ce1 in nanosleep () from /lib64/libc.so.6
[Current thread is 1 (Thread 0x7f085559d750 (LWP 26817))]

Thread 1 (Thread 0x7f085559d750 (LWP 26817)):
[KCrash Handler]
#5  0x00007f084cf19645 in raise () from /lib64/libc.so.6
#6  0x00007f084cf1ac33 in abort () from /lib64/libc.so.6
#7  0x00007f0854ff82d5 in qt_message_output(QtMsgType, char const*) () from /usr/lib64/libQtCore.so.4
#8  0x00007f0854ff841d in qFatal(char const*, ...) () from /usr/lib64/libQtCore.so.4
#9  0x00007f0854ff848a in qt_assert(char const*, char const*, int) () from /usr/lib64/libQtCore.so.4
#10 0x000000000048a0cd in DB::IdNameMapper::add (this=0xd21088, fileName=@0x7fff5d5e7600) at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/XMLDB/IdNameMapper.cpp:9
#11 0x0000000000470e1b in XMLDB::Database::addImages (this=0xd20fd0, images=@0x7fff5d5e7720) at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/XMLDB/Database.cpp:239
#12 0x0000000000533516 in ImportExport::ImportHandler::addNewRecord (this=0x7fff5d5e8ca0, info={d = 0x7fff5d5e77f0})
    at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/ImportExport/ImportHandler.cpp:266
#13 0x0000000000534c4d in ImportExport::ImportHandler::updateDB (this=0x7fff5d5e8ca0) at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/ImportExport/ImportHandler.cpp:161
#14 0x00000000005357d0 in ImportExport::ImportHandler::aCopyJobCompleted (this=0x7fff5d5e8ca0, job=0xf50dc0) at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/ImportExport/ImportHandler.cpp:206
#15 0x000000000043faef in ImportExport::ImportHandler::qt_metacall (this=0x7fff5d5e8ca0, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fff5d5e79f0)
    at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/moc_ImportHandler.cpp:72
#16 0x00007f08550fc454 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#17 0x00007f0854a3a7c2 in KJob::result(KJob*) () from /usr/lib64/libkdecore.so.5
#18 0x00007f0854a3ab37 in KJob::emitResult() () from /usr/lib64/libkdecore.so.5
#19 0x00007f08540129bb in KIO::FileCopyJob::slotResult(KJob*) () from /usr/lib64/libkio.so.5
#20 0x00007f0854013174 in KIO::FileCopyJob::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkio.so.5
#21 0x00007f08550fc454 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#22 0x00007f0854a3a7c2 in KJob::result(KJob*) () from /usr/lib64/libkdecore.so.5
#23 0x00007f0854a3ab37 in KJob::emitResult() () from /usr/lib64/libkdecore.so.5
#24 0x00007f085400a650 in KIO::SimpleJob::slotFinished() () from /usr/lib64/libkio.so.5
#25 0x00007f08540089d5 in KIO::SimpleJob::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkio.so.5
#26 0x00007f0854008a26 in ?? () from /usr/lib64/libkio.so.5
#27 0x00007f08550fc454 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#28 0x00007f08540b0761 in KIO::SlaveInterface::dispatch(int, QByteArray const&) () from /usr/lib64/libkio.so.5
#29 0x00007f08540ae6b2 in KIO::SlaveInterface::dispatch() () from /usr/lib64/libkio.so.5
#30 0x00007f08540a1ede in KIO::Slave::gotInput() () from /usr/lib64/libkio.so.5
#31 0x00007f08540a21e8 in KIO::Slave::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkio.so.5
#32 0x00007f08550fc454 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#33 0x00007f0853fdf431 in ?? () from /usr/lib64/libkio.so.5
#34 0x00007f0853fdfada in KIO::Connection::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkio.so.5
#35 0x00007f08550f7105 in QObject::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#36 0x00007f084db511bd in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#37 0x00007f084db58f8a in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#38 0x00007f0854599d6b in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#39 0x00007f08550e8091 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#40 0x00007f08550e8d3a in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/libQtCore.so.4
#41 0x00007f0855110863 in ?? () from /usr/lib64/libQtCore.so.4
#42 0x00007f084c84e0fb in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#43 0x00007f084c8518cd in ?? () from /usr/lib64/libglib-2.0.so.0
#44 0x00007f084c851a8b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#45 0x00007f08551104ef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#46 0x00007f084dbe19bf in ?? () from /usr/lib64/libQtGui.so.4
#47 0x00007f08550e69a2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#48 0x00007f08550e6b2d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#49 0x0000000000535c88 in ImportExport::ImportHandler::exec (this=0x7fff5d5e8ca0, settings=@0x7fff5d5e8d50, kimFileReader=0x7fff5d5e8da0)
    at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/ImportExport/ImportHandler.cpp:47
#50 0x000000000052dae1 in ImportExport::Import::exec (this=0xdb9cc0, fileName=<value optimized out>) at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/ImportExport/Import.cpp:81
#51 0x000000000052dcfe in ImportExport::Import::imageImport (url=@0x7fff5d5e8e30) at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/ImportExport/Import.cpp:32
#52 0x000000000052de16 in ImportExport::Import::imageImport () at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/ImportExport/Import.cpp:21
#53 0x00000000004ed155 in MainWindow::Window::qt_metacall (this=0x96af50, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff5d5e8fa0)
    at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/MainWindow/Window.cpp:1322
#54 0x00007f08550fc454 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#55 0x00007f084db4b527 in QAction::triggered(bool) () from /usr/lib64/libQtGui.so.4
#56 0x00007f084db4bcf0 in QAction::activate(QAction::ActionEvent) () from /usr/lib64/libQtGui.so.4
#57 0x00007f084dee331d in ?? () from /usr/lib64/libQtGui.so.4
#58 0x00007f085464ea51 in KMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libkdeui.so.5
#59 0x00007f084dba37a9 in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#60 0x00007f084dee5afb in QMenu::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#61 0x00007f084db511bd in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#62 0x00007f084db597fa in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#63 0x00007f0854599d6b in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#64 0x00007f08550e8091 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#65 0x00007f084db58b98 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&) () from /usr/lib64/libQtGui.so.4
#66 0x00007f084dbbd214 in ?? () from /usr/lib64/libQtGui.so.4
#67 0x00007f084dbbba77 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/libQtGui.so.4
#68 0x00007f084dbe2214 in ?? () from /usr/lib64/libQtGui.so.4
#69 0x00007f084c84e0fb in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#70 0x00007f084c8518cd in ?? () from /usr/lib64/libglib-2.0.so.0
#71 0x00007f084c851a8b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#72 0x00007f08551104ef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#73 0x00007f084dbe19bf in ?? () from /usr/lib64/libQtGui.so.4
#74 0x00007f08550e69a2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#75 0x00007f08550e6b2d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#76 0x00007f08550e8ffd in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#77 0x00000000004430de in main (argc=1, argv=0x7fff5d5eaef8) at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-20090721/main.cpp:83
Comment 3 Martin Jost 2009-11-11 18:29:33 UTC
I reproduced this with KPA 4.1.0.
(compiled here on Suse 11.1, 64 bit)

I'll attach the .kim file 

On the console I get:
ASSERT: "!fileName.startsWith(QLatin1String("/"))" in file /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-4.1/XMLDB/IdNameMapper.cpp, line 9
KCrash: Application 'kphotoalbum' crashing...
sock_file=/home/jost/.kde4/socket-godot/kdeinit4__0

Here is the kcrash:
Anwendung: KPhotoAlbum (kphotoalbum), Signal SIGABRT   
ESC[?1034h[Thread debugging using libthread_db enabled]
0x00007f316e787cf1 in nanosleep () from /lib64/libc.so.6
[Current thread is 1 (Thread 0x7f3176d9c750 (LWP 15758))]

Thread 3 (Thread 0x7f3165b86950 (LWP 15762)):
#0  0x00007f317658ed59 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f31767fff29 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQtCore.so.4
#2  0x00000000004f9402 in ImageManager::Manager::next (this=0xc95120) at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum
-4.1/ImageManager/Manager.cpp:141                                                                                   
#3  0x00000000004f885f in ImageManager::ImageLoader::run (this=0xc3a310) at /home/pd/pd-sw/foto/kphotoalbum/kphotoal
bum-4.1/ImageManager/ImageLoader.cpp:61                                                                             
#4  0x00007f31767fef72 in ?? () from /usr/lib64/libQtCore.so.4                                                      
#5  0x00007f317658b070 in start_thread () from /lib64/libpthread.so.0                                               
#6  0x00007f316e7b911d in clone () from /lib64/libc.so.6                                                            
#7  0x0000000000000000 in ?? ()                                                                                     

Thread 2 (Thread 0x7f3166387950 (LWP 15763)):
#0  0x00007f317658ed59 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f31767fff29 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQtCore.so.4
#2  0x00000000004f9402 in ImageManager::Manager::next (this=0xc95120) at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum
-4.1/ImageManager/Manager.cpp:141                                                                                   
#3  0x00000000004f885f in ImageManager::ImageLoader::run (this=0xc3a350) at /home/pd/pd-sw/foto/kphotoalbum/kphotoal
bum-4.1/ImageManager/ImageLoader.cpp:61                                                                             
#4  0x00007f31767fef72 in ?? () from /usr/lib64/libQtCore.so.4                                                      
#5  0x00007f317658b070 in start_thread () from /lib64/libpthread.so.0                                               
#6  0x00007f316e7b911d in clone () from /lib64/libc.so.6                                                            
#7  0x0000000000000000 in ?? ()                                                                                     

Thread 1 (Thread 0x7f3176d9c750 (LWP 15758)):
[KCrash Handler]                             
#5  0x00007f316e718645 in raise () from /lib64/libc.so.6
#6  0x00007f316e719c33 in abort () from /lib64/libc.so.6
#7  0x00007f31767f72d5 in qt_message_output(QtMsgType, char const*) () from /usr/lib64/libQtCore.so.4
#8  0x00007f31767f741d in qFatal(char const*, ...) () from /usr/lib64/libQtCore.so.4                 
#9  0x00007f31767f748a in qt_assert(char const*, char const*, int) () from /usr/lib64/libQtCore.so.4 
#10 0x000000000048a32d in DB::IdNameMapper::add (this=0xab33f8, fileName=@0x7fffd1208f50) at /home/pd/pd-sw/foto/kph
otoalbum/kphotoalbum-4.1/XMLDB/IdNameMapper.cpp:9                                                                   
#11 0x000000000047064b in XMLDB::Database::addImages (this=0xab3340, images=@0x7fffd1209070) at /home/pd/pd-sw/foto/
kphotoalbum/kphotoalbum-4.1/XMLDB/Database.cpp:237                                                                  
#12 0x0000000000532af6 in ImportExport::ImportHandler::addNewRecord (this=0x7fffd12096b0, info={d = 0x7fffd1209140})
    at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-4.1/ImportExport/ImportHandler.cpp:266                           
#13 0x000000000053422d in ImportExport::ImportHandler::updateDB (this=0x7fffd12096b0) at /home/pd/pd-sw/foto/kphotoa
lbum/kphotoalbum-4.1/ImportExport/ImportHandler.cpp:161                                                             
#14 0x0000000000534db0 in ImportExport::ImportHandler::aCopyJobCompleted (this=0x7fffd12096b0, job=0x0) at /home/pd/
pd-sw/foto/kphotoalbum/kphotoalbum-4.1/ImportExport/ImportHandler.cpp:206                                           
#15 0x0000000000534396 in ImportExport::ImportHandler::aCopyFailed (this=0x7fffd12096b0, files=                     
          {<QList<QString>> = {{p = {static shared_null = {ref = {_q_value = 8693}, alloc = 0, begin = 0, end = 0, s
harable = 1, array = {0x0}}, d = 0x7fffd12093b0}, d = 0x7fffd12093b0}}, <No data fields>}) at /home/pd/pd-sw/foto/kp
hotoalbum/kphotoalbum-4.1/ImportExport/ImportHandler.cpp:195                                                        
#16 0x0000000000534a89 in ImportExport::ImportHandler::copyNextFromExternal (this=0x7fffd12096b0) at /home/pd/pd-sw/
foto/kphotoalbum/kphotoalbum-4.1/ImportExport/ImportHandler.cpp:110                                                 
#17 0x0000000000534f5e in ImportExport::ImportHandler::copyFromExternal (this=0x7fffd12096b0) at /home/pd/pd-sw/foto
/kphotoalbum/kphotoalbum-4.1/ImportExport/ImportHandler.cpp:70                                                      
#18 0x000000000053523c in ImportExport::ImportHandler::exec (this=0x7fffd12096b0, settings=@0x7fffd1209760, kimFileR
eader=0x7fffd12097b0)                                                                                               
    at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-4.1/ImportExport/ImportHandler.cpp:43                            
#19 0x000000000052d0c1 in ImportExport::Import::exec (this=0xd78000, fileName=<value optimized out>) at /home/pd/pd-
sw/foto/kphotoalbum/kphotoalbum-4.1/ImportExport/Import.cpp:81                                                      
#20 0x000000000052d2de in ImportExport::Import::imageImport (url=@0x7fffd1209840) at /home/pd/pd-sw/foto/kphotoalbum
/kphotoalbum-4.1/ImportExport/Import.cpp:32                                                                         
#21 0x000000000052d3f6 in ImportExport::Import::imageImport () at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-4.1/Im
portExport/Import.cpp:21                                                                                            
#22 0x00000000004ec70d in MainWindow::Window::qt_metacall (this=0x976750, _c=QMetaObject::InvokeMetaMethod, _id=0, _
a=0x7fffd12099b0)
    at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-4.1/MainWindow/Window.cpp:1322
#23 0x00007f31768fb454 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#24 0x00007f316f34a527 in QAction::triggered(bool) () from /usr/lib64/libQtGui.so.4
#25 0x00007f316f34acf0 in QAction::activate(QAction::ActionEvent) () from /usr/lib64/libQtGui.so.4
#26 0x00007f316f6e231d in ?? () from /usr/lib64/libQtGui.so.4
#27 0x00007f3175e4da51 in KMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libkdeui.so.5
#28 0x00007f316f3a27a9 in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#29 0x00007f316f6e4afb in QMenu::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#30 0x00007f316f3501bd in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#31 0x00007f316f3587fa in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#32 0x00007f3175d98d6b in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#33 0x00007f31768e7091 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#34 0x00007f316f357b98 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**,
 QPointer<QWidget>&) () from /usr/lib64/libQtGui.so.4
#35 0x00007f316f3bc214 in ?? () from /usr/lib64/libQtGui.so.4
#36 0x00007f316f3baa77 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/libQtGui.so.4
#37 0x00007f316f3e1214 in ?? () from /usr/lib64/libQtGui.so.4
#38 0x00007f316e04d0fb in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#39 0x00007f316e0508cd in ?? () from /usr/lib64/libglib-2.0.so.0
#40 0x00007f316e050a8b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#41 0x00007f317690f4ef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/li
b64/libQtCore.so.4
#42 0x00007f316f3e09bf in ?? () from /usr/lib64/libQtGui.so.4
#43 0x00007f31768e59a2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtC
ore.so.4
#44 0x00007f31768e5b2d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#45 0x00007f31768e7ffd in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#46 0x0000000000443352 in main (argc=3, argv=0x7fffd120b988) at /home/pd/pd-sw/foto/kphotoalbum/kphotoalbum-4.1/main
.cpp:86
Comment 4 Martin Jost 2009-11-11 18:32:00 UTC
Created attachment 38264 [details]
.kim file which crashes KPA 4.1.0

Note:
So far every attempt here to import a .kim file crashed KPA 4.1 and all snapshots (I tried) leading up to 4.1.
This .kim file contains just one foto.
Comment 5 Miika Turkia 2009-12-31 22:26:58 UTC
I could not reproduce in KPA 4.1.1 (the import does feel buggy but no crashes, Had to go back one step before finish button got enabled). I do get an error message stating that cannot copy file from following locations..Could the problem be in the actual JPEG file and not kim? Or could it be fixed in 4.1.1?
Comment 6 Miika Turkia 2012-02-04 18:53:14 UTC
Git commit ba4d90f5597639dbcd8e160b17ee02bca16239ac by Miika Turkia.
Committed on 04/02/2012 at 19:43.
Pushed by mturkia into branch 'master'.

.kim import crashes KPA fixed

There was indeed a bug in import code that was demonstrated with the
provided test.kim. Under special circumstances the import file name was
set to root and was later on caught by Q_ASSERT with crashing result.

M  +1    -1    ImportExport/ImportHandler.cpp

http://commits.kde.org/kphotoalbum/ba4d90f5597639dbcd8e160b17ee02bca16239ac