.kim import crashes KPA fixed

There was indeed a bug in import code that was demonstrated with the
provided test.kim. Under special circumstances the import file name was
set to root and was later on caught by Q_ASSERT with crashing result.

BUG: 201921